<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crystal.contacto.DetailContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textSize="@dimen/text_titulo"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_titulo"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/textNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nombre"
                android:textStyle="bold"
                android:textSize="@dimen/text_name"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_text">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_calendar"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/textFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_fecha"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_text">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_phone"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/textTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_telefono"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_text">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_mail"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_text">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_description"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/textDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_descripcion"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_editar"
            android:layout_marginTop="40dp"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
